Added key bind for hold

--- a/player-highlighter/src/main/resources/assets/playerhighlighter/lang/en_us.json
+++ b/player-highlighter/src/main/resources/assets/playerhighlighter/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"key.playerhighlighter.toggle": "Toggle Keep Player Highlight",
+	"key.playerhighlighter.hold": "Hold to Highlight Player",
 	"category.playerhighlighter": "Player Highlighter"
 }
